enable jdk19 preview features in maven