@@ -9,8 +9,8 @@
 		<lwjgl.natives>natives-linux</lwjgl.natives>
 		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
 		<mdep.outputFile>class.path</mdep.outputFile>
-		<maven.compiler.source>18</maven.compiler.source>
-		<maven.compiler.target>18</maven.compiler.target>
+		<maven.compiler.source>19</maven.compiler.source>
+		<maven.compiler.target>19</maven.compiler.target>
 	</properties>
 
 	<build>
@@ -20,7 +20,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<release>18</release>
+                                        <compilerArgs>--enable-preview</compilerArgs>				
+					<release>19</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -30,6 +31,9 @@
 				<configuration>
 					<show>public</show>
 					<stylesheetfile>stylesheet.css</stylesheetfile>
+ <additionalJOptions>
+         <additionalJOption>--enable-preview</additionalJOption>
+	     </additionalJOptions>
 				</configuration>
 			</plugin>
 
